--- a/templates/ask.html
+++ b/templates/ask.html
@@ -85,7 +85,7 @@
             <input type="checkbox" name="hobby" value="music" id="hobby-music">
             <label for="hobby-music">Music</label><br>
     
-            <input type="checkbox" name="hobby" value="nature lover" id="hobby-natual">
+            <input type="checkbox" name="hobby" value="natual" id="hobby-natual">
             <label for="hobby-natual">Matual lover</label><br>
     
             <input type="checkbox" name="hobby" value="outdoor" id="hobby-outdoor">
