--- a/templates/questions-and-answers.html
+++ b/templates/questions-and-answers.html
@@ -2,7 +2,7 @@
 {% block body %}
 
 <div class="search-result-basic">
-    Want more gift ideas? 
+    Ask and answer
     <ul>
         {% for gift in gifts%}
         <li>{{gift.gift_name}}</li>
