--- a/templates/search.html
+++ b/templates/search.html
@@ -60,40 +60,40 @@
 
             More specific for your loved ones? Choose by hobby:<br>
         
-            <input type="checkbox" name="hobby" value="art" id="hobby-art">
+            <input type="checkbox" name="hobby" value="1" id="hobby-art">
             <label for="hobby-art">Art</label><br>
     
-            <input type="checkbox" name="hobby" value="craft" id="hobby-craft">
+            <input type="checkbox" name="hobby" value="2" id="hobby-craft">
             <label for="hobby-craft">Craft</label><br>
     
-            <input type="checkbox" name="hobby" value="creative" id="hobby-creative">
+            <input type="checkbox" name="hobby" value="3" id="hobby-creative">
             <label for="hobby-creative">Creative</label><br>
     
-            <input type="checkbox" name="hobby" value="fashion" id="hobby-fashion">
+            <input type="checkbox" name="hobby" value="4" id="hobby-fashion">
             <label for="hobby-fashion">Fashion</label><br>
     
-            <input type="checkbox" name="hobby" value="garderning" id="hobby-garderning">
+            <input type="checkbox" name="hobby" value="5" id="hobby-garderning">
             <label for="hobby-garderning">Garderning</label><br>
     
-            <input type="checkbox" name="hobby" value="household" id="hobby-household">
+            <input type="checkbox" name="hobby" value="6" id="hobby-household">
             <label for="hobby-household">Household</label><br>
     
-            <input type="checkbox" name="hobby" value="intellectual" id="hobby-intellectual">
+            <input type="checkbox" name="hobby" value="7" id="hobby-intellectual">
             <label for="hobby-intellectual">Intellectual</label><br>
     
-            <input type="checkbox" name="hobby" value="music" id="hobby-music">
+            <input type="checkbox" name="hobby" value="8" id="hobby-music">
             <label for="hobby-music">Music</label><br>
     
-            <input type="checkbox" name="hobby" value="nature lover" id="hobby-natual">
+            <input type="checkbox" name="hobby" value="9" id="hobby-natual">
             <label for="hobby-natual">Matual lover</label><br>
     
-            <input type="checkbox" name="hobby" value="outdoor" id="hobby-outdoor">
+            <input type="checkbox" name="hobby" value="10" id="hobby-outdoor">
             <label for="hobby-outdoor">Outdoor</label><br>
     
-            <input type="checkbox" name="hobby" value="sport" id="hobby-sport">
+            <input type="checkbox" name="hobby" value="11" id="hobby-sport">
             <label for="hobby-sport">Sport</label><br>
     
-            <input type="checkbox" name="hobby" value="technology" id="hobby-technology">
+            <input type="checkbox" name="hobby" value="12" id="hobby-technology">
             <label for="hobby-technology">Technology</label><br>
 
 
