--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,16 +2,41 @@
 {% block title %}Gift Ideas Home{% endblock %}
 
 {% block body %}
-  <h1>Welcome!</h1>
+  <h1>Welcome to Gift Idea!</h1>
 
   <h2>Navigation</h2>
   <ul>
+    {% if 'user_email' in session %}
+    <li><a href="/profile">User profile</a></li>
+    <li><a href="/logout">Log out</a></li>
+    {% endif %}
     <li><a href="/search">Search gift ideas</a></li>
     <li><a href="/ask">Ask and answer for gift ideas</a></li>
     <li><a href="/share">Share your gift ideas</a></li>
+
     <!-- <li><a href="/users">View all users</a></li> -->
   </ul>
+  
+  {% if 'user_email' not in session %}
+  <h3>Login</h3>
+  <form action="/login" method="POST">
+    <p>
+      Email <input type="text" name="email">
+    </p>
 
+    <p>
+      Password <input type="password" name="password">
+    </p>
+
+    <p>
+      <input type="submit">
+    </p>
+  </form>
+
+  <div>
+    No account yet? <a href="/signup">Create new account</a>
+  </div>
+  {% endif %}
   <!-- <h2>Create an Account</h2>
   <form action="/users" method="POST">
     <p>
