--- a/templates/ask.html
+++ b/templates/ask.html
@@ -61,40 +61,40 @@
 
             More specific for your loved ones? Choose by hobby:<br>
         
-            <input type="checkbox" name="hobby" value="art" id="hobby-art">
+            <input type="radio" name="hobby" value="art" id="hobby-art">
             <label for="hobby-art">Art</label><br>
     
-            <input type="checkbox" name="hobby" value="craft" id="hobby-craft">
+            <input type="radio" name="hobby" value="craft" id="hobby-craft">
             <label for="hobby-craft">Craft</label><br>
     
-            <input type="checkbox" name="hobby" value="creative" id="hobby-creative">
+            <input type="radio" name="hobby" value="creative" id="hobby-creative">
             <label for="hobby-creative">Creative</label><br>
     
-            <input type="checkbox" name="hobby" value="fashion" id="hobby-fashion">
+            <input type="radio" name="hobby" value="fashion" id="hobby-fashion">
             <label for="hobby-fashion">Fashion</label><br>
     
-            <input type="checkbox" name="hobby" value="garderning" id="hobby-garderning">
+            <input type="radio" name="hobby" value="garderning" id="hobby-garderning">
             <label for="hobby-garderning">Garderning</label><br>
     
-            <input type="checkbox" name="hobby" value="household" id="hobby-household">
+            <input type="radio" name="hobby" value="household" id="hobby-household">
             <label for="hobby-household">Household</label><br>
     
-            <input type="checkbox" name="hobby" value="intellectual" id="hobby-intellectual">
+            <input type="radio" name="hobby" value="intellectual" id="hobby-intellectual">
             <label for="hobby-intellectual">Intellectual</label><br>
     
-            <input type="checkbox" name="hobby" value="music" id="hobby-music">
+            <input type="radio" name="hobby" value="music" id="hobby-music">
             <label for="hobby-music">Music</label><br>
     
-            <input type="checkbox" name="hobby" value="natual" id="hobby-natual">
+            <input type="radio" name="hobby" value="natual" id="hobby-natual">
             <label for="hobby-natual">Matual lover</label><br>
     
-            <input type="checkbox" name="hobby" value="outdoor" id="hobby-outdoor">
+            <input type="radio" name="hobby" value="outdoor" id="hobby-outdoor">
             <label for="hobby-outdoor">Outdoor</label><br>
     
-            <input type="checkbox" name="hobby" value="sport" id="hobby-sport">
+            <input type="radio" name="hobby" value="sport" id="hobby-sport">
             <label for="hobby-sport">Sport</label><br>
     
-            <input type="checkbox" name="hobby" value="technology" id="hobby-technology">
+            <input type="radio" name="hobby" value="technology" id="hobby-technology">
             <label for="hobby-technology">Technology</label><br>
 
 
