--- a/templates/questions-and-answers.html
+++ b/templates/questions-and-answers.html
@@ -4,8 +4,18 @@
 <div class="search-result-basic">
     Ask and answer
     <ul>
-        {% for gift in gifts%}
-        <li>{{gift.gift_name}}</li>
+        {% for question in questions %}
+        <li>{{question.question_id}}. gender: {{question.gender}}, age: {{question.age}}, 
+            price: {{question.price}}, hobby: {{question.hobby}} </li>
+            
+            {% for answer in answers %}
+                {% if }
+
+            {% endfor %}
+          
+            <form action="/answer" method="POST">
+                <label for="gift_answer">Your suggestion:</label><br>
+                <input type="text" name="gift_name" id="gift_answer"></br>
         {% endfor %}
     </ul>
 </div>
