--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -11,7 +11,8 @@
     <li><a href="/logout">Log out</a></li>
     {% endif %}
     <li><a href="/search">Search gift ideas</a></li>
-    <li><a href="/ask">Ask and answer for gift ideas</a></li>
+    <li><a href="/ask">Ask for gift ideas</a></li>
+    <li><a href="/answers">Answers for gift ideas</a></li>
     <li><a href="/share">Share your gift ideas</a></li>
 
     <!-- <li><a href="/users">View all users</a></li> -->
