--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,8 @@
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
 	  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 	  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-
-    <!-- Include any page-specific JavaScript using this block. -->
-	  {% block js %}{% endblock %}
+    
+    <link href="/static/css/site.css" rel="stylesheet">
 
     {% block head %}{% endblock %}
   </head>
@@ -27,6 +26,9 @@
     {% endfor %}
 
     {% block body %}{% endblock %}
+    
+    <!-- Include any page-specific JavaScript using this block. -->
+	  {% block js %}{% endblock %}
 
     {% block after_body %}{% endblock %}
   </body>
