--- a/templates/questions.html
+++ b/templates/questions.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
-{% block body %}
 
+{% block head %}
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+{% endblock %}
+
+{% block body %}
 <div id="ask-question"></div>
 {% endblock %}
 
