--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,8 +13,8 @@
     <li><a href="/search">Search gift ideas</a></li>
     <li><a href="/ask">Ask</a></li>
     <li><a href="/answers">Answers for gift ideas</a></li>
-    <li><a href="/share">Share your gift ideas</a></li>
-    <li><a href="/react">Using react</a></li>
+    <li><a href="/search-react">Search using react</a></li>
+    <li><a href="/react">Questions using react</a></li>
 
     <!-- <li><a href="/users">View all users</a></li> -->
   </ul>
@@ -39,33 +39,5 @@
     No account yet? <a href="/signup">Create new account</a>
   </div>
   {% endif %}
-  <!-- <h2>Create an Account</h2>
-  <form action="/users" method="POST">
-    <p>
-      Email <input type="text" name="email">
-    </p>
-
-    <p>
-      Password <input type="password" name="password">
-    </p>
-
-    <p>
-      <input type="submit">
-    </p>
-  </form>
-
-  <h2>Log In</h2>
-  <form action="/login" method="POST">
-    <p>
-      Email <input type="text" name="email">
-    </p>
-
-    <p>
-      Password <input type="password" name="password">
-    </p>
-
-    <p>
-      <input type="submit">
-    </p>
-  </form> -->
+  
 {% endblock %}
