--- a/templates/base.html
+++ b/templates/base.html
@@ -1,35 +1,59 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
     <!-- CSS  -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>
-      {% block title %}{% endblock %}
-    </title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <title>{% block title %}{% endblock %}</title>
 
     <!-- We'll load React dependencies on all pages for this app. -->
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
-	  <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-	  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-    
-    <link href="/static/css/site.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.js"></script>
+    <script
+      src="https://unpkg.com/react@16/umd/react.development.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
+      crossorigin
+    ></script>
+
+    <script
+      src="https://unpkg.com/react/umd/react.production.min.js"
+      crossorigin
+    ></script>
+
+    <script
+      src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
+      crossorigin
+    ></script>
+
+    <script
+      src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js"
+      crossorigin
+    ></script>
+
+    <script>
+      var Alert = ReactBootstrap.Alert;
+    </script>
+
+    <link href="/static/css/site.css" rel="stylesheet" />
 
     {% block head %}{% endblock %}
   </head>
+
+  <div id="navbar"></div>
+  <script src="/static/js/navbar.jsx" type="text/jsx"></script>
   <body>
     {% for msg in get_flashed_messages() %}
-      <p class="flash-msg">
-        {{ msg }}
-      </p>
-    {% endfor %}
-
-    {% block body %}{% endblock %}
-    
+    <p class="flash-msg">{{ msg }}</p>
+    {% endfor %} {% block body %}{% endblock %}
     <!-- Include any page-specific JavaScript using this block. -->
-	  {% block js %}{% endblock %}
-
-    {% block after_body %}{% endblock %}
+    {% block js %}{% endblock %} {% block after_body %}{% endblock %}
   </body>
 </html>
