--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,39 +1,31 @@
-{% extends 'base.html' %}
-{% block body %}
+{% extends 'base.html' %} {% block body %}
 <div class="container">
-    <div class="overview">
-        Account information<br>
-        <p>
-            <b>Your username:</b><span id="user-name"> {{ username }}</span><br>
-            <b>Your email:</b><span id="user-email"> {{ email }}</span><br>
-            <b>Your gender:</b><span id="user-gender"> {{ gender }}</span><br>
-            <b>Your age:</b><span id="user-age"> {{ age }}</span><br>
-            <b>Your hobby:</b>
-            {% for hobby in hobbies %}
-                <span id="user-hobby">{{ hobby }}</span>
-            {% endfor %}
-        </p>
+  <div class="overview">
+    Account information<br />
+    <p>
+      <b>Your username:</b><span id="user-name"> {{ username }}</span><br />
+      <b>Your email:</b><span id="user-email"> {{ email }}</span><br />
+      <b>Your gender:</b><span id="user-gender"> {{ gender }}</span><br />
+      <b>Your age:</b><span id="user-age"> {{ age }}</span><br />
+      <b>Your hobby:</b>
+      {% for hobby in hobbies %}
+      <span id="user-hobby">{{ hobby }}</span>
+      {% endfor %}
+    </p>
+  </div>
 
-
-    </div>
-
-    <div class="activities">
-        Account activities<br>
-        <p>
-            <b>Your ask history</b><br>
-            {% for question in questions %}
-                <span id="user-question">{{ question.gender }} {{ question.age }} {{ question.price }}</span><br>
-            {% endfor %}
-
-            <b>Your answer history</b><br>
-
-            <b>Your like history</b><br>
-
-        </p>
-
-
-    </div>
-
+  <div class="activities">
+    Account activities<br />
+    <p>
+      <b>Your ask history</b><br />
+      {% for question in questions %}
+      <span id="user-question"
+        >{{ question.gender }} {{ question.age }} {{ question.price }} {{
+        question.hobby }}</span
+      ><br />
+      {% endfor %}
+    </p>
+  </div>
 </div>
 
 {% endblock %}
