--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,3 +1,5 @@
 {% extends 'base.html' %} {% block body %}
-
-{% endblock %} {% block js %} {% endblock %}
+<div id="homepage"></div>
+{% endblock %} {% block js %}
+<script src="/static/js/homepage.jsx" type="text/jsx"></script>
+{% endblock %}
