--- a/templates/base.html
+++ b/templates/base.html
@@ -48,16 +48,19 @@
   </head>
 
   <div id="navbar"></div>
-  <script src="/static/js/navbar.jsx" type="text/jsx"></script>
+
   <body>
     {% block body %}{% endblock %}
     <!-- Include any page-specific JavaScript using this block. -->
     {% block js %}{% endblock %} {% block after_body %}{% endblock %}
+    <script src="/static/js/navbar.jsx" type="text/jsx"></script>
   </body>
 
   <footer>
-    <p>Author: Kelly Li<br>
-      © 2022 Copyright <br>
-    <a href="www.giftidea.com">www.giftidea.com</a></p>
+    <p>
+      Author: Kelly Li<br />
+      © 2022 Copyright <br />
+      <a href="www.giftidea.com">www.giftidea.com</a>
+    </p>
   </footer>
 </html>
