--- a/static/css/site.css
+++ b/static/css/site.css
@@ -63,7 +63,6 @@
   box-shadow: 0 0 11px rgba(33, 33, 33, 0.7);
 }
 footer {
-  margin-top: 50px;
   text-align: center;
   padding: 3px;
   background-color: #eb9478;
@@ -150,9 +149,10 @@ footer {
 }
 
 .title-block {
-  margin-left: 50px;
-  margin-right: 50px;
-  margin-top: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 50px;
+  padding-bottom: 0px;
 }
 
 .criteria-block {
@@ -170,7 +170,7 @@ footer {
 }
 
 .question-block {
-  margin: 20px;
+  padding: 20px;
 }
 
 .answer {
@@ -209,4 +209,196 @@ right: 0px; */
 .right {
   margin-top: 6px;
   display: flex;
+}
+
+.accordion-button:not(.collapsed) {
+  color: #ff3417;
+  background-color: #ffe79a;
+}
+
+.form-control {
+  margin: 5px;
+}
+
+.background-ask {
+  background-repeat: repeat-y;
+  background-image: url("/static/img/background1.jpg");
+  background-position: center;
+  background-size: cover;
+
+  /* filter: blur(4px);
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; */
+}
+
+.background-profile {
+  background-repeat: no-repeat;
+  background-image: url("/static/img/background2.jpg");
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  min-height: 100vh;
+  max-width: 100%;
+
+  /* filter: blur(1px); */
+  /* width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1; */
+}
+
+.list-group {
+  width: 70%;
+  padding-bottom: 20px;
+}
+
+.accordion {
+  width: 70%;
+  padding-bottom: 50px;
+}
+
+.alert {
+  margin-top: 40px;
+  width: 800px;
+}
+
+img {
+  max-width: 100%;
+}
+
+.wrapper {
+  min-height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+}
+
+.inner {
+  min-width: 850px;
+  margin: auto;
+  padding-top: 68px;
+  padding-bottom: 48px;
+  background: url("/static/img/registration-form.jpg");
+}
+.inner h3 {
+
+  font-size: 22px;
+  
+  text-align: center;
+  margin-bottom: 32px;
+  color: #333;
+  letter-spacing: 2px;
+}
+
+.sign-up-form {
+  width: 50%;
+  padding-left: 45px;
+}
+
+.form-group {
+  display: flex;
+}
+.form-group .form-wrapper {
+  width: 50%;
+}
+.form-group .form-wrapper:first-child {
+  margin-right: 20px;
+}
+
+.form-wrapper {
+  margin-bottom: 0px;
+}
+.form-wrapper label {
+  margin-bottom: p0;
+  display: block;
+}
+
+.signup-form-control {
+  border: 1px solid #ccc;
+  display: block;
+  width: 80%;
+  height: 40px;
+  padding: 0 10px;
+  border-radius: 20px;
+ 
+  background: none;
+}
+.signup-form-control:focus {
+  border: 1px solid #ae3c33;
+}
+
+select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+  padding-left: 20px;
+}
+select option[value=""][disabled] {
+  display: none;
+}
+
+.signup-button {
+  border: none;
+  width: 152px;
+  height: 40px;
+  margin: auto;
+  margin-top: 29px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  background: #ae3c33;
+ 
+  color: #fff;
+  
+
+  border-radius: 20px;
+  overflow: hidden;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+}
+.signup-button:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #d66969;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: 0 50%;
+  transform-origin: 0 50%;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.signup-button:hover:before {
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
+  -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+  transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+}
+
+
+.radiobutton {
+  padding-bottom: 20px;
 }
