--- a/static/css/site.css
+++ b/static/css/site.css
@@ -52,9 +52,12 @@
   height: 80px;
 }
 
+.card-group {
+  margin-bottom: 50px;
+}
 .card {
   width: 20rem;
-  height: 28rem;
+  height: 34rem;
   margin: 50px 30px 50px 30px;
   border: 1px solid rgba(0, 0, 0, 0.18) !important;
 }
@@ -132,7 +135,7 @@ footer {
 }
 
 .figure-img {
-  padding: 15px;
+  padding: 30px;
 }
 
 .figure-caption {
@@ -146,6 +149,7 @@ footer {
   margin-left: 50px;
   margin-right: 50px;
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .title-block {
